--- a/JAVAWEB/.settings/org.eclipse.core.resources.prefs
+++ b/JAVAWEB/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,8 @@
 eclipse.preferences.version=1
+encoding//WebContent/WEB-INF/tags/admin_template.tag=UTF-8
 encoding//WebContent/views/admin/userinfoView.jsp=UTF-8
 encoding//WebContent/views/footer.jsp=UTF-8
 encoding//src/controllers/admin/DeleteProductServlet.java=UTF-8
+encoding//src/controllers/admin/EditServlet.java=UTF-8
+encoding//src/controllers/admin/ProductList.java=UTF-8
 encoding//src/controllers/web/HomeServlet.java=UTF-8
